Fix height of input chat and send btn , fix collapse state

--- a/src/assets/styles/pages/Chat.css
+++ b/src/assets/styles/pages/Chat.css
@@ -107,21 +107,20 @@
     display: flex;
     gap: 10px;
     margin-top: auto;
+    height: 40px;
 }
 
 .chat input {
     flex: 1;
-
-    padding: 12px;
+    padding:  15px ;
     border-radius: 10px;
-
     border: 1px solid var(--sp-border);
     background: var(--sp-dark-2);
     color: var(--sp-white);
-
     outline: none;
     font-size: var(--fs-small);
     transition: 0.2s;
+    margin: 0;
 }
 
 .chat input:focus {
@@ -131,17 +130,15 @@
 
 .chat button {
     padding: 12px 18px;
-
     background: var(--sp-green);
     border: none;
     border-radius: 10px;
-
     color: var(--sp-white);
     font-weight: 600;
     font-size: var(--fs-small);
-
     cursor: pointer;
     transition: 0.2s;
+    margin: 0;
 }
 
 .chat button:hover {
